--- a/package.json
+++ b/package.json
@@ -4,12 +4,40 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "npm run build:server && concurrently vite \"http-server dummy\" \"nodemon \\\"tsc -p tsconfig.server.json\\\"\"",
+    "build": "tsc && npm run build:server && vite build",
+    "build:server": "tsc -p tsconfig.server.json",
+    "preview": "vite preview",
+    "start": "node ./dist-server/index.js",
+    "dummy": "http-server dummy"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
+    "concurrently": "^7.6.0",
+    "http-server": "^14.1.1",
+    "prettier": "^2.8.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.0",
+    "nodemon": "^2.0.20"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      ".git",
+      "node_modules",
+      "dist",
+      "dist-server"
+    ],
+    "watch": [
+      "./server"
+    ],
+    "ext": "ts"
   }
 }
